# review-ops

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  team_members copy.json  team_members.json.example
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
specs/001-stale-pr-board/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-enhance-on-stale-pr-board/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-github-rate-limit-handling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-table-view-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-refine-review-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-old-pr-reporting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.py  config.py  github_client.py  models.py  slack_client.py  staleness.py  url_builder.py
tests/: conftest.py
tests/fixtures/: github_pr_response.json  github_reviews_response.json  team_members_valid.json
tests/integration/: test_github_client.py  test_graphql_batch.py  test_rate_limit_detection.py  test_retry_logic.py  test_slack_client.py  test_slack_integration.py
tests/unit/: test_api_metrics.py  test_config.py  test_github_client_dual_search.py  test_github_client_filtering.py  test_models.py  test_rate_limit.py  test_slack_client.py  test_slack_table_view.py  test_staleness.py  test_url_builder.py
(+19 files in other folders)
